--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="16dp"
+    android:focusableInTouchMode="true"
     android:orientation="vertical"
     tools:context=".ui.login.LoginActivity">
 
@@ -13,6 +13,8 @@
         android:id="@+id/tilEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp">
 
         <android.support.design.widget.TextInputEditText
@@ -29,6 +31,8 @@
         android:id="@+id/tilPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         app:passwordToggleEnabled="true">
 
@@ -45,27 +49,31 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="end"
+        android:layout_gravity="center"
         android:layout_marginTop="16dp"
         android:onClick="onClickLogin"
         android:text="@string/log_in"
         android:textAllCaps="true"
         />
 
-    <Space
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        />
-
     <Button
-        style=""
+        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="end"
+        android:layout_gravity="center"
+        android:layout_margin="4dp"
         android:onClick="onClickRegister"
         android:text="@string/register"
         android:textAllCaps="true"
+        />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="@drawable/img_login"
+        android:scaleType="centerCrop"
+        android:src="@drawable/gradient"
         />
 
 </LinearLayout>
