--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -59,22 +59,22 @@
             tools:visibility="visible">
 
             <Button
+                android:id="@+id/btnLogin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="16dp"
-                android:onClick="onClickLogin"
                 android:text="@string/log_in"
                 android:textAllCaps="true"
                 />
 
             <Button
+                android:id="@+id/btnRegister"
                 style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_margin="4dp"
-                android:onClick="onClickRegister"
                 android:text="@string/register"
                 android:textAllCaps="true"
                 />
