--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -20,7 +20,8 @@
         android:layout_width="match_parent"
         android:layout_height="?android:actionBarSize"
         android:layout_alignParentBottom="true"
-        app:itemBackground="@color/primary"
+        android:background="@color/primary"
+        app:elevation="8dp"
         app:itemIconTint="@drawable/selector_bottom_nav"
         app:itemTextColor="@drawable/selector_bottom_nav"
         app:menu="@menu/bottom_navigation"
