Fixed a few minor bugs.

--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -28,6 +28,8 @@
             android:layout_margin="16dp"
             android:enabled="false"
             android:hint="@string/caption"
+            android:imeOptions="actionDone"
+            android:inputType="textShortMessage"
             />
 
         <LinearLayout
